tests/ui/use/use-super-global-path.stderr
error[E0433]: global paths cannot start with `super`
  --> $DIR/use-super-global-path.rs:11:15
   |
LL |         use ::super::main;
   |               ^^^^^ cannot start with this

error[E0432]: unresolved import `super`
  --> $DIR/use-super-global-path.rs:7:11
   |
LL |     use ::super::{S, Z};
   |           ^^^^^ cannot start with this

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0432, E0433.
For more information about an error, try `rustc --explain E0432`.
